[package]
name = "gasless"
version = "0.1.1"
edition = "2024"
authors = ["Sawyer Cutler <sawyer@dirtroa.dev>", "Manuel Barbas"]
description = "Gasless Transactions in Rust for SKALE Network"
readme = "README.md"
homepage = "https://eidolon.gg"
repository = "https://github.com/Eidolon-Labs/gasless-rs"
license = "MIT"
keywords = ["blockchain", "skale", "evm", "gasless", "eidolon"]

[dependencies]
alloy-primitives = "1.1.0"
alloy-sol-types = "1.1.0"
sha3 = "0.10.8"
rand = "0.8.5"
